--- a/ASP.NETCoreAPIAuthSchemeUsingJWTs/ASP.NETCoreAPIAuthSchemeUsingJWTs.csproj
+++ b/ASP.NETCoreAPIAuthSchemeUsingJWTs/ASP.NETCoreAPIAuthSchemeUsingJWTs.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.3" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.1" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.0.1" PrivateAssets="All" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="5.2.1" />
